--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="score"></div>
         <div class="startScreen">
             <p>Press here to start <br>
-               Use Arrow keys to move <br>
+               Use the potentiometer and the joystick to move <br>
                If you hit another car you will lose.  
             </p>
             <div>Select Level
