--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="startScreen">
             <p>Press here to start <br>
                Use the potentiometer and the joystick to move <br>
+	       Press the touch "c" to connect the Arduino <br>
                If you hit another car you will lose.  
             </p>
             <div>Select Level
